src/tests/snapshots/Shlang__tests__parser_test__empty_call.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"a();\")"
---
Call(
    Spanned {
        unspanned: Call {
            callee: Variable(
                Spanned {
                    unspanned: Variable {
                        name: "a",
                    },
                    span: (
                        0,
                        1,
                    ),
                },
            ),
            args: [],
        },
        span: (
            1,
            3,
        ),
    },
)
