src/tests/snapshots/Shlang__tests__parser_test__unary_operator.snap
---
source: src/tests/parser_test.rs
expression: "parse_expr(\"!true;\")"
---
UnaryNode(
    Spanned {
        unspanned: UnaryNode {
            kind: NOT,
            object: Value(
                Spanned {
                    unspanned: Bool(
                        true,
                    ),
                    span: (
                        1,
                        5,
                    ),
                },
            ),
        },
        span: (
            1,
            5,
        ),
    },
)
